# SubEtha

./: .gitignore  Cargo.toml  README.md
.github/workflows/: wiki-deploy.yml
assets/: Logo.psd
crates/subetha/: Cargo.toml  README.md
crates/subetha-core/: Cargo.toml  README.md
crates/subetha-core/examples/: obs_ring_memory.rs
crates/subetha-core/src/: axis_signature.rs  cpuid.rs  handshake.rs  lib.rs  marshal.rs  migration.rs  observation.rs
crates/subetha-cxc/: Cargo.toml  README.md
crates/subetha-cxc/benches/: adaptive_ipc_overhead.rs  adaptive_khl_batch.rs  adaptive_ring_overhead.rs  adaptive_send_specialized_ab.rs  async_fanout.rs  async_overhead.rs  bloom_filter_ab.rs  capacity_adaptive_ring.rs  capacity_broadcast_ring.rs  capacity_pubsub_ring.rs  concurrent_methods.rs  epoch_barrier.rs  event_state_log.rs  failover.rs  fec_gf_simd.rs  heartbeat.rs  k_tower_cascade.rs  lazy_config.rs  multi_thief.rs  owner_lease.rs  pass_registry.rs  priority_fanout.rs  progress_task.rs  scheduler.rs  shared_async_pointer.rs  shared_atomic.rs  shared_bit_vec.rs  shared_blocked_bloom_filter.rs  shared_bloom_filter.rs  shared_broadcast_ring.rs  shared_btree_map.rs  shared_cell.rs  shared_count_min_sketch.rs  shared_deque.rs  shared_deque_khpd.rs  shared_deque_loh.rs  shared_deque_urd.rs  shared_fence_clock.rs  shared_graph.rs  shared_handle_table.rs  (+28 more)
crates/subetha-cxc/docs/: CROSS_PLATFORM_BENCHMARKS.md  UDP_OPTIMIZATION_ROADMAP.md
crates/subetha-cxc/docs/pointers/: EPOCH_BARRIER.md  EVENT_STATE_LOG.md  FAILOVER.md  FRAME_RING.md  HEARTBEAT.md  K_TOWER_CASCADE.md  LAZY_CONFIG.md  OFFSET_PTR.md  OWNER_LEASE.md  PASS_REGISTRY.md  PRIORITY_FANOUT.md  PROGRESS_TASK.md  SCHEDULER.md  SHARED_ASYNC_POINTER.md  SHARED_ATOMIC.md  SHARED_BIT_VEC.md  SHARED_BLOCKED_BLOOM_FILTER.md  SHARED_BLOOM_FILTER.md  SHARED_BROADCAST_RING.md  SHARED_BTREE_MAP.md  SHARED_CELL.md  SHARED_COUNT_MIN_SKETCH.md  SHARED_DEQUE.md  SHARED_FENCE_CLOCK.md  SHARED_GRAPH.md  SHARED_HANDLE_TABLE.md  SHARED_HASH_MAP.md  SHARED_HISTOGRAM.md  SHARED_HYPER_LOG_LOG.md  SHARED_LEADER_ELECTION.md  SHARED_LINKED_LIST.md  SHARED_LRU_CACHE.md  SHARED_NAN_TAGGED_VALUE.md  SHARED_NAN_VALUE.md  SHARED_ONCE_CELL.md  SHARED_RATE_LIMITER.md  SHARED_REGION.md  SHARED_RESERVOIR_SAMPLER.md  SHARED_RING.md  SHARED_RING_ADAPTIVE.md  (+14 more)
crates/subetha-cxc/examples/: adaptive_growth_xproc.rs  adaptive_ipc_demo.rs  adaptive_ipc_pinned.rs  adaptive_khl_e2e.rs  adaptive_passthrough.rs  adaptive_ring_frames.rs  adaptive_ring_hugepage.rs  adaptive_ring_morph.rs  adaptive_ring_sidecar.rs  async_ring_demo.rs  async_subscriber_scale.rs  auto_ipc_demo.rs  auto_order_xproc.rs  bench_throughput.rs  blocked_bloom_compare.rs  blocking_locks_demo.rs  blocking_ring_demo.rs  blocking_tcp_bridge_e2e.rs  bridge_lan.rs  cacheline_probe.rs  cap_morph_sidecar_e2e.rs  capacity_broadcast_morph_matrix.rs  capacity_morph_e2e.rs  capacity_morph_matrix.rs  capacity_morph_xproc.rs  capacity_morph_xproc_producer.rs  capacity_pubsub_morph_matrix.rs  channel_async.rs  competitor_matrix.rs  compound_morph_probe.rs  compressed_sharded_lan.rs  condvar_xproc_notifier.rs  condvar_xproc_waiter.rs  construction_cost.rs  contract_guard_probe.rs  cross_process_compare.rs  cross_process_throughput.rs  dgram_iouring_demo.rs  dgram_wire_gate.rs  direct_file_round_trip.rs  (+67 more)
crates/subetha-cxc/src/: adaptive_ipc.rs  adaptive_ring.rs  api.rs  async_ring.rs  bbr.rs  blocking_mpmc_ring.rs  blocking_mpsc_ring.rs  blocking_rw_lock.rs  blocking_semaphore.rs  blocking_spsc_ring.rs  blocking_tcp_bridge.rs  burst_model_sensor.rs  cache_ops.rs  cached_clock.rs  capacity_adaptive_ring.rs  capacity_broadcast_ring.rs  capacity_pubsub_ring.rs  compressed_udp.rs  control_frame.rs  control_table.rs  cpu_affinity.rs  cross_process_waker.rs  dgram.rs  dispatch_deque.rs  epoch_barrier.rs  event_state_log.rs  failover.rs  fd_handoff.rs  fec.rs  forecast_sensor.rs  frame_region.rs  frame_ring.rs  fusion.rs  heartbeat.rs  hugepages.rs  interleave.rs  k_tower_cascade.rs  kernel_async_ring.rs  large_pages.rs  lazy_config.rs  (+106 more)
crates/subetha-cxc/tests/: cross_handle_failover.rs  flush_async_all.rs  pointer_signatures.rs
crates/subetha-pointers/: Cargo.toml  README.md
crates/subetha-pointers/benches/: bitsteal_pointers.rs  hybrid_pointers.rs  umbra_pointer.rs  unified.rs  versioned_bloom.rs
crates/subetha-pointers/src/: adaptive_cheri_pointer.rs  adaptive_rasp_batch.rs  bloom_pointer.rs  cardinality_pointer.rs  k_tower_pointer.rs  kstep_pointer.rs  lib.rs  self_desc_pointer.rs  umbra_pointer.rs  versioned_pointer.rs
crates/subetha-sidecar/: Cargo.toml  LICENSE-MIT  README.md
crates/subetha-sidecar/src/: bench_safe.rs  lib.rs
crates/subetha/src/: lib.rs
docs/: CROSS_PROCESS_IPC_PERFORMANCE.md  LAN_BRIDGE_PERFORMANCE.md  LOW_LEVEL_OPTIMIZATIONS.md  ORDERING_MODES_PERFORMANCE.md  POLYMORPHIC_SUBSTRATE_AXES.md  SENS_O_MATIC_PERFORMANCE.md  STRUCTURAL_COMPRESSION_LAYER.md  TRANSPORT_COMPARISON.md  competitor_matrix_results-epyc-vps.json  competitor_matrix_results-freebsd.json  competitor_matrix_results-linux.json  competitor_matrix_results-macos.json  competitor_matrix_results-windows.json  competitor_matrix_results-wsl.json  competitor_matrix_results.json  cross_process_ipc_results-epyc-vps.json  cross_process_ipc_results-freebsd.json  cross_process_ipc_results-linux-zmq.json  cross_process_ipc_results-linux.json  cross_process_ipc_results-macos.json  cross_process_ipc_results-windows.json  cross_process_ipc_results-wsl.json  cross_process_ipc_results.json  lan_bridge_results.json  ordering_modes_results-epyc-vps.json  ordering_modes_results-freebsd.json  ordering_modes_results-linux-vm.json  ordering_modes_results-linux.json  ordering_modes_results-macos.json  ordering_modes_results-windows-tsc.json  ordering_modes_results-wsl.json  phase_lock_xproc_results.json
wiki/: go.mod  hugo.yaml
wiki/content/: _index.md
wiki/content/docs/: 404.md  _index.md
wiki/content/docs/explanation/: _index.md  architecture.md  citations.md  (+4 more)
wiki/i18n/: en.yaml
wiki/layouts/_markup/: render-link.html
(+157 files in other folders)
