[workspace]
resolver = "2"
members = [
    "crates/subetha-core",
    "crates/subetha-sidecar",
    "crates/subetha-pointers",
    "crates/subetha-cxc",
    "crates/subetha",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/Variably-Constant/subetha"
authors = ["Markus Newton"]
keywords = ["ipc", "shared-memory", "mmf", "cross-process", "kernel-bypass"]
categories = ["concurrency", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
subetha-core = { path = "crates/subetha-core", version = "0.1.0" }
subetha-sidecar = { path = "crates/subetha-sidecar", version = "0.1.0" }
subetha-pointers = { path = "crates/subetha-pointers", version = "0.1.0" }
subetha-cxc = { path = "crates/subetha-cxc", version = "0.1.0" }

# Production dependencies.
parking_lot = "0.12"
once_cell = "1.19"
arc-swap = "1.7"
memmap2 = "0.9"
io-uring = "0.7"

# Benchmarking competitors (dev-only)
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
interprocess = "2.2"
ipc-channel = "0.22"
iceoryx2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# QUIC bridge (dev-only): real localhost handshake for the
# cross-host CXC extension demo + E2E test. Crypto provider is
# ring: bridge_lan loopback A/B against aws-lc-rs measured a tie
# (627/685 vs 632/690 Mbit/s drain at 2M slots) on hosts without
# VAES, and ring's build chain is lighter (no cmake/NASM). The
# provider install is one caller-replaceable helper
# (install_default_crypto_provider); hosts with VAES/AVX-512
# AES-GCM kernels are where re-measuring aws-lc-rs makes sense.
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-ring", "bloom"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
