[package]
name = "subetha-sidecar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Sidecar control plane for CXC / SubEtha adaptive primitives: per-NUMA scan thread, policy dispatch, SidecarBox RAII, AdaptiveInstance trait."

[dependencies]
subetha-core = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
